library_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-service
  labels:
    app: library-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: library-service
    spec:
      containers:
      - name: library-service
        image: ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
