library_service.yml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  labels:
    app: library-service
spec:
  selector:
    app: library-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
