library_ingress_configuration.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: library-api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-service
            port:
              number: 80
